# aziris-trex

./: .gitignore  Cargo.toml  README.md  build.rs
src/: actions.rs  app_state.rs  comms.rs  connection_status.rs  controls.rs  lib.rs  logs.rs  main.rs  options.rs  vars.rs
src/actions/: component.rs  mod.rs
src/atomic/: folder.rs  group.rs  mod.rs
src/comms/: channel.rs  commands.rs  mod.rs
src/components/: connection_status.rs
src/connection_status/: component.rs  mod.rs
src/controls/: component.rs  mod.rs
src/custom_controllers/: button_state.rs  keylogger.rs  mod.rs  value_changed.rs
src/global/: app_state.rs  keys.rs  mod.rs  vars.rs
src/lights/: component.rs  light_mix.rs  mod.rs
src/logs/: component.rs  log.rs  mod.rs
src/options/: component.rs  mod.rs  scan_mode.rs  scan_order.rs
src/options/scan_mode/: component.rs  mod.rs  scan_mode.rs
src/options/scan_order/: component.rs  mod.rs  scan_order.rs
trex/: queue.h  state_button.h  trex.ino
