[package]
name = "trex-ui"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# [dependencies.druid]
# version = "0.7"
# features = ["im", "svg", "image"]

[dependencies]
serialport = "4.2.0"
# enigo = "0.0.14"
enigo = { path = "enigo", version = "0.0.14" }
druid = { path = "druid/druid", version = "0.7", features = ["im", "svg", "image"] }
once_cell = "1.16.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"